[ADD] The logic to refresh all the data if the list was cleared

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,8 @@ img {
 
 .app button {
   height: 50px;
-  width: 150px;
+  width: 250px;
+  margin-top: 10px;
   border-radius: 15px;
   border: none;
   align-self: center;
